--- a/MyBudget/MyBudget.csproj
+++ b/MyBudget/MyBudget.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Converter\CountryFlagConverter.cs" />
     <Compile Include="Converter\PriceConverter.cs" />
     <Compile Include="Converter\PriceToPLNConverter.cs" />
+    <Compile Include="Converter\RowToIndexConverter.cs" />
     <Compile Include="Utility\CustomCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModel\ExpenseListViewModel.cs" />
