--- a/MyBudget/MyBudget.csproj
+++ b/MyBudget/MyBudget.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Controls.DataVisualization.Toolkit, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Windows.Controls.DataVisualization.Toolkit.4.0.0.0\lib\net40-Client\System.Windows.Controls.DataVisualization.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.3.0.2.4\lib\net462\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -70,9 +73,14 @@
     <Compile Include="Converter\PriceConverter.cs" />
     <Compile Include="Converter\PriceToPLNConverter.cs" />
     <Compile Include="Converter\RowToIndexConverter.cs" />
+    <Compile Include="Services\DialogService.cs" />
     <Compile Include="Utility\CustomCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="ViewModel\ExpenseChartsViewModel.cs" />
     <Compile Include="ViewModel\ExpenseListViewModel.cs" />
+    <Compile Include="View\ExpenseChartsView.xaml.cs">
+      <DependentUpon>ExpenseChartsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ExpenseListView.xaml.cs">
       <DependentUpon>ExpenseListView.xaml</DependentUpon>
     </Compile>
@@ -88,6 +96,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\ExpenseChartsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ExpenseListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
