--- a/MyBudget/packages.config
+++ b/MyBudget/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net472" />
   <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net472" />
 </packages>
